@@ -17,7 +17,7 @@ extern "C" {
 #include "mpi.h"
 #include "stdlib.h"
 #include <stdio.h>
-#define DS_MAX_VERSION (20)
+//#define DS_MAX_VERSION (20)
 
 #include "transports.h"
 
