@@ -1,11 +1,11 @@
 #!/bin/bash
-#SBATCH --job-name="dspaces_nokeep"
+#SBATCH --job-name="native_dimes_nokeep"
 #SBATCH --output="results/%j.out"
 #SBATCH --partition=RM
 #SBATCH --nodes=4
 #SBATCH --ntasks-per-node=28
 #SBATCH --export=ALL
-#SBATCH -t 00:5:00
+#SBATCH -t 00:00:30
 #SBATCH --mail-type=BEGIN
 #SBATCH --mail-user=lifen@iupui.edu
 
@@ -14,7 +14,7 @@
 CASE_NAME=raw_dimes_nokeep
 #CASE_NAME=dataspaces_nokeep
 FILESIZE2PRODUCE=256 # 64*64*256*2*8 = 16MB per proc
-NSTOP=100 # how many steps
+NSTOP=10 # how many steps
 PROCS_SERVER=4 # dspaces server
 PROCS_PRODUCER=8
 PROCS_CONSUMER=$((PROCS_PRODUCER/2))
