@@ -1,5 +1,5 @@
 #!/bin/bash
-#SBATCH --job-name="dspaces_nokeep"
+#SBATCH --job-name="native_dspaces_nokeep"
 #SBATCH --output="results/%j.out"
 #SBATCH --partition=RM
 #SBATCH --nodes=4
