@@ -13,6 +13,10 @@ TODO
 	2. dspaces hanging
 	3. ENABLE_TESTING in flexpath conf, enabled
 
+## Sep 26
+	dimes:
+		sync before each step,
+		also sync after the last step
 ## Sep 25
 	changes:
 		* add transports method, now differnet transport is chosen by
